ORC-1009: [C++] Missing string include causes build failure with MSVC++ (#919)

### What changes were proposed in this pull request?

Include string in ExpressionTree.hh.

### Why are the changes needed?

Without it the library cannot be built on Windows with newer msvc++ compiler (version 19.29).

### How was this patch tested?

Manually, successfully building the library on Windows on a local machine.